# OperatingSystemProj3

./: Barrier.h.gch  CMakeLists.txt  Makefile  MapReduceClient.cpp  MapReduceClient.h  MapReduceFramework.cpp  MapReduceFramework.h  README  SampleClient.cpp  ex3.tar  main
SampleClient/: Makefile  SampleClient.cpp
gtest-1.11.0/cmake/: CMakeCache.txt
